--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ body {
     border: 1px solid #212128;
     border-left: 4px solid #FF4545;
     transform: translateX(calc(100% + 4%));
-    transition: all 4s cubic-bezier(0.68, -0.55, 0.265, 1.35);
 }
 
 .notification-close {
@@ -68,8 +67,31 @@ body {
 
 .notifications.flex {
     display: flex;
-    transform: translateX(0);
+    position: absolute;
     transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
+    animation: flexAnimate 4s ease-in infinite;
+}
+
+@keyframes flexAnimate {
+    0% {
+        transform: translateY(calc(100% + 4%));
+        opacity: 0;
+    }
+
+    10% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    80% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(calc(100% + 4%));
+        opacity: 0;
+    }
 }
 
 .container {
