--- a/css/styles.css
+++ b/css/styles.css
@@ -329,6 +329,7 @@ body {
     font-size: 15px;
     color: rgb(255, 255, 255);
     margin-bottom: 5px;
+    max-width: 250px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
